--- a/config.env
+++ b/config.env
@@ -3,11 +3,11 @@ CONFIG_ENV=config.env
 #一般来说只需要按实际需要修改5－20行的相关内容就可以。包含18个工作流可同时工作可最大化提高编译内核的成功率，助力LXC,KernelSU 。
 #工具链集包含AOSP clang ,LLVM, ARM gcc ,SD-clang(高通的llvm工具链）,Proton-clang, Slim-LLVM, ZyC clang,Mandi-Sa-clang,linaro gcc ,Google gcc_4.9 ,Android NDK ,arter97_gcc等
 #内核源地址
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
+KERNEL_SOURCE=https://gitee.com/NewtoPhone/vkernel
 #分支
-KERNEL_SOURCE_BRANCH=twrp-12
+KERNEL_SOURCE_BRANCH=master
 #内核配置文件
-KERNEL_CONFIG=vendor/wayne_defconfig
+KERNEL_CONFIG=vendor/violet-perf_defconfig
 
 #启用lxc-docker支持，鉴于很多人都不明白，禁用，懂的自己开启。默认支持KernelSU。
 ENABLE_LXC=false
@@ -15,15 +15,15 @@ ENABLE_LXC=false
 #KernelSU相关，默认开启。
 ENABLE_KERNELSU=true
 ADD_KPROBES_CONFIG=true
-ADD_OVERLAYFS_CONFIG=true
-KERNELSU_TAG=main
+ADD_OVERLAYFS_CONFIG=false
+KERNELSU_TAG=v0.9.5
 
 #这块几乎可以不动，KERNEL_IMAGE_NAME可能的取值有Image.gz-dtb,Image.gz,Image等
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 
 #额外附加命令，默认启用LLVM=1 LLVM_IAS=1 
-#EXTRA_CMDS:LD=ld.lld
+EXTRA_CMDS:LD=ld.lld
 #EXTRA_CMDS:LLVM=1 LLVM_IAS=1 
 
 #Ccache,可加速二次构建
@@ -33,7 +33,7 @@ ENABLE_CCACHE=false
 DISABLE_FST=true
 
 #(0)使用Android NDK编译内核，NDK_VERSION可选的值有26,25,24,23,22,21,20,19,18,17,16,15
-NDK_VERSION=21
+NDK_VERSION=26
 
 #(1)谷歌官方的AOSP clang，对Build kernel Google git.yml生效
 #AOSP 工具链参考选择可从74～111行的内容中进行选择
@@ -116,7 +116,7 @@ SD_CLANG_BRANCH=10
 ENABLE_PROTON_CLANG=true
 PROTON_CLANG_SOURCE=https://gitlab.com/LeCmnGend/proton-clang
 #PROTON_CLANG_BRANCH可选的值有 clang-13 ,clang-14, clang-15, clang-16, clang-17
-PROTON_CLANG_BRANCH=clang-13
+PROTON_CLANG_BRANCH=clang-17
 
 
 
@@ -128,15 +128,15 @@ ENABLE_CLIBC_PATCH=true
 
 #(5.5)tc_build项目作者的预编译Slim-llvm toolchain ,使用pgo优化，速度更快。跟多介绍见http://kernel.mirror.iweb.ca/tools/llvm/。配合ELECTRON_BINUTILS使用。
 #目前SLIM_LLVM_CLANG_VERSION的可选值有18.1.0 17.0.6 16.0.6 15.0.7 14.0.6 13.0.1 12.0.1 11.1.0
-SLIM_LLVM_CLANG_VERSION=15.0.7
+SLIM_LLVM_CLANG_VERSION=17.0.6
 #基于tc-build的相同配置的binutils,配合slim llvm使用。ELECTRON_BINUTILS_VERSION2的可选值有 2.41 2.40 2.39 2.38 2.37 2.36.1 2.36 2.35.2 2.35.1 2.35 2.34 2.33.1 2.32 2.31
-ELECTRON_BINUTILS_VERSION2=2.39
+ELECTRON_BINUTILS_VERSION2=2.40
 
 
 #（6）使用LLVM-clang，加我自己制作的electron-binutils来构建内核,由于ubuntu自带的binutils版本过少，加入electron-binutils可有更多版本的binutils,也更加合理的和各种llvm clang版本匹配。ELECTRON_BINUTILS_VERSION1和ELECTRON_BINUTILS_VERSION
 #的取值是一样的，主要是懒得改了，加个1来区分，如果ELECTRON_BINUTILS_VERSION1留空则用ubuntu自带的binutils, 同理适用ELECTRON_BINUTILS_VERSION。(运行系统ubuntu-20.04)
 #目前存在版本16.0.0  15.0.6  14.0.0  13.0.0  12.0.0  11.1.0  11.0.0  10.0.1  10.0.0  9.0.1  8.0.1
-LLVM_CLANG_VERSION=11.0.0
+LLVM_CLANG_VERSION=16.0.0
 #基于tc-build的相同配置的binutils,ELECTRON_BINUTILS_VERSION1的可选值有 2.41 2.40 2.39 2.38 2.37 2.36.1 2.36 2.35.2 2.35.1 2.35 2.34 2.33.1 2.32 2.31
 ELECTRON_BINUTILS_VERSION1=2.35
 
@@ -219,7 +219,7 @@ KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
 # Configuration
-DISABLE-LTO=true
+DISABLE-LTO=false
 DISABLE_CC_WERROR=true
 #ADD_KPROBES_CONFIG=false
 #ADD_OVERLAYFS_CONFIG=false
