--- a/config.env
+++ b/config.env
@@ -14,7 +14,7 @@ ENABLE_LXC=false
 
 #KernelSU相关，默认开启。
 ENABLE_KERNELSU=true
-ADD_KPROBES_CONFIG=true
+ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
 KERNELSU_TAG=v0.9.2
 
