--- a/config.env
+++ b/config.env
@@ -3,11 +3,11 @@ CONFIG_ENV=config.env
 #一般来说只需要按实际需要修改5－20行的相关内容就可以。包含18个工作流可同时工作可最大化提高编译内核的成功率，助力LXC,KernelSU 。
 #工具链集包含AOSP clang ,LLVM, ARM gcc ,SD-clang(高通的llvm工具链）,Proton-clang, Slim-LLVM, ZyC clang,Mandi-Sa-clang,linaro gcc ,Google gcc_4.9 ,Android NDK ,arter97_gcc等
 #内核源地址
-KERNEL_SOURCE=https://gitee.com/NewtoPhone/vkernel
+KERNEL_SOURCE=https://github.com/NewtoPhone/android_kernel_xiaomi_msm8996
 #分支
-KERNEL_SOURCE_BRANCH=master
+KERNEL_SOURCE_BRANCH=lineage-21
 #内核配置文件
-KERNEL_CONFIG=vendor/violet-perf_defconfig
+KERNEL_CONFIG=vendor/gemini-perf_defconfig
 
 #启用lxc-docker支持，鉴于很多人都不明白，禁用，懂的自己开启。默认支持KernelSU。
 ENABLE_LXC=false
@@ -138,7 +138,7 @@ ELECTRON_BINUTILS_VERSION2=2.40
 #目前存在版本16.0.0  15.0.6  14.0.0  13.0.0  12.0.0  11.1.0  11.0.0  10.0.1  10.0.0  9.0.1  8.0.1
 LLVM_CLANG_VERSION=16.0.0
 #基于tc-build的相同配置的binutils,ELECTRON_BINUTILS_VERSION1的可选值有 2.41 2.40 2.39 2.38 2.37 2.36.1 2.36 2.35.2 2.35.1 2.35 2.34 2.33.1 2.32 2.31
-ELECTRON_BINUTILS_VERSION1=2.35
+ELECTRON_BINUTILS_VERSION1=2.40
 
 #（6.5）使用llvm官方发布的最新的LLVM，基于ubuntu-22.04，加我自己制作的electron-binutils来构建内核。更新更快。(运行系统ubuntu-22.04,配置文件为build-kernel_by_LLVM-least.yml)
 #目前LLVM存在版本即LLVM_VERSION的可选值 17.06 17.05 17.04 17.02 16.04 16.03 16.02
@@ -151,12 +151,12 @@ ELECTRON_BINUTILS_VERSION=2.41
 
 #（7）使用ZyC clang，构建内核。该配置对build-kernel_by_ZyC-clang.yml生效
 #目前存在版本 19,18,17,16.05,16
-ZYC_CLANG_VERSION=17
+ZYC_CLANG_VERSION=18
 
 
 #（8）使用ARM gcc，构建内核。该配置对build-kernel_by_ARM-gcc.yml生效
  #目前存在版本 12.3  11.3  10.3  10.2 9.2 8.32  8.31  8.22  8.21
-ARM_GCC_VERSION=8.21
+ARM_GCC_VERSION=12.3
 
 #（9）使用Mandi-Sa clang,构建内核.该配置对build-kernel_by_Mandi-Sa-clang.yml生效
 #目前存在版本 15 16 17 18 19
